--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.9",
+    "mongoose": "^6.0.13",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
     "validator": "^13.7.0"
   }
