--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.2",
     "cookie-parser": "^1.4.6",
     "cryptojs": "^2.5.3",
+    "deep-email-validator": "^0.1.21",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
